# Pipsqueak

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES.txt
include/pipsqueak/audio_io/: device_manager.hpp  device_scanner.hpp  types.hpp
include/pipsqueak/core/: audio_buffer.hpp  buffer_store.hpp  channel_view.hpp  logging.hpp  types.hpp
include/pipsqueak/dsp/: audio_source.hpp  mixer.hpp  sample_player.hpp  sampler.hpp  sampler_voice.hpp
include/pipsqueak/engine/: engine.hpp
src/audio_io/: device_manager.cpp  device_scanner.cpp
src/core/: audio_buffer.cpp  buffer_store.cpp
src/dsp/: mixer.cpp  sample_player.cpp  sampler.cpp  sampler_voice.cpp
src/engine/: engine.cpp
tests/: CMakeLists.txt
tests/integration/audio_io/: device_manager_tests.cpp  device_scanner_tests.cpp
tests/integration/engine/: engine_tests.cpp
tests/unit/core/: audio_buffer_tests.cpp  buffer_store_tests.cpp  channel_view_tests.cpp
tests/unit/dsp/: mixer_tests.cpp  sample_player_tests.cpp  sampler_tests.cpp
